--- a/Formulario/grails-app/assets/stylesheets/main.css
+++ b/Formulario/grails-app/assets/stylesheets/main.css
@@ -20,7 +20,7 @@
     
     .container-form {
         width: 90%; 
-        margin: 0 auto; 
+        margin: 0; 
     }
 
     .form-box {
@@ -120,4 +120,18 @@ textarea {
     padding: 6px;
     width: 200px;
     margin: 2% 34%
+}
+
+.mensagem-sucesso{
+    background-color: #dff0d8;
+    color: #3c763d;
+    border: 1px solid #d6e9c6;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 4px;
+}
+
+p{
+    font-size: 20px;
+    margin: 0 38%;
 }
